-
Bug
-
Resolution: Fixed
-
Major
-
Lustre 2.11.0
-
3
-
9223372036854775807
When the HSM CDT is shut down and restarted, it resets cdt_last_cookie using ktime_get_real_seconds() and examines the CDT llog for existing requests, in order to set cdt_last_cookie to the highest known value, so that newly-assigned cookies are unique. There is a window between CDT_INIT and CDT_RUNNING during which new requests can arrive, and if the CDT llog has not been fully examined, cookies can be reused. This can cause the following two assertions to be triggered in cdt_agent_record_hash_add():
LASSERT(carl0->carl_cat_idx == carl1->carl_cat_idx);
LASSERT(carl0->carl_rec_idx == carl1->carl_rec_idx);
- is related to
-
LU-13689 Replace cdt_state_lock with cdt_llog_lock
-
- Open
-